--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@ body {
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 ul, ol {
@@ -50,31 +49,20 @@ a {
   top: -100%;
   left: 0;
   z-index: 99;
-  -webkit-transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
   transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 .at-header .header-inner {
   height: 100px;
   line-height: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
   padding: 0 21px;
 }
 .at-header .header-inner .logo a {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 .at-header .header-inner .logo a img {
   width: auto;
@@ -82,17 +70,12 @@ a {
 }
 .at-header .header-inner .menu_ul {
   line-height: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 53px;
   position: absolute;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 .at-header .header-inner .menu_ul li a {
   font-size: 20px;
@@ -100,12 +83,8 @@ a {
   color: #000;
 }
 .at-header .header-inner .right_lnb {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 30px;
 }
 .at-header .header-inner .right_lnb .search_btn {
@@ -128,20 +107,14 @@ a {
   height: 3px;
   right: -2px;
   bottom: 3px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
+  transform: rotate(45deg);
   background: #000;
 }
 .at-header .header-inner .right_lnb .allMenu_btn {
   width: 30px;
   height: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+  flex-flow: column;
   gap: 7px;
   cursor: pointer;
 }
@@ -158,23 +131,18 @@ a {
 
 /*** 헤더 끝 ***/
 /*** 섹션01 시작 ***/
+.section01 {
+  border-bottom: 1px solid #000;
+}
 .section01-inner .top .line_bx {
   height: 78px;
   line-height: 78px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   border-bottom: 1px solid #000;
 }
 .section01-inner .top .line_bx > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 .section01-inner .top .line_bx > div span {
@@ -182,23 +150,16 @@ a {
   background: #000;
 }
 .section01-inner .top .line_bx > div:first-child, .section01-inner .top .line_bx > div:last-child {
-  -webkit-column-gap: 236px;
-     -moz-column-gap: 236px;
-          column-gap: 236px;
+  column-gap: 236px;
 }
 .section01-inner .top .b_tit {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 10px 15px 10px 0;
+  border-bottom: 1px solid #000;
 }
 .section01-inner .top .b_tit .txt h1 {
   line-height: 147px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   font-size: 180px;
   font-weight: 600;
@@ -217,4 +178,67 @@ a {
   height: 270px;
   background: #000;
   border-radius: 140px;
+}
+.section01-inner .bot {
+  display: flex;
+  padding: 20px;
+  column-gap: 20px;
+}
+.section01-inner .bot-left {
+  flex: 0.6;
+  display: flex;
+}
+.section01-inner .bot-left .s_txt {
+  font-size: 22px;
+  font-weight: 400;
+  writing-mode: vertical-lr;
+  text-orientation: sideways-right;
+}
+.section01-inner .bot-left .s_txt p:last-child {
+  line-height: 36px;
+}
+.section01-inner .bot-left .r_txt .img-box img {
+  width: 100%;
+  filter: grayscale(1);
+}
+.section01-inner .bot-left .r_txt .img-box .deco {
+  width: 100%;
+  height: 60px;
+  margin: 20px 0 0 0;
+  background: #000;
+}
+.section01-inner .bot-left .r_txt .txt-box {
+  margin: 20px 0 0 0;
+}
+.section01-inner .bot-left .r_txt .txt-box h1 {
+  line-height: 36px;
+  font-size: 22px;
+  font-weight: 400;
+}
+.section01-inner .bot-right {
+  flex: 0.4;
+  display: flex;
+  flex-flow: column;
+  gap: 20px;
+}
+.section01-inner .bot-right div {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.section01-inner .bot-right div p {
+  position: relative;
+  z-index: 10;
+  padding: 10px;
+  font-size: 50px;
+  font-weight: 500;
+  background: #eee;
+  border: 1px solid #000;
+  border-right: 0;
+  border-bottom: 0;
+}
+.section01-inner .bot-right div .line_dash {
+  position: absolute;
+  right: 0;
+  border-bottom: 1px dashed #000;
 }
